refactor: remove local management PIN
